@@ -6,6 +6,9 @@
   - getNumericFunctions(): it no longer lists aggregate functions: avg, prod and sum
   - getSystemFunctions(): it no longer lists timedate function: extract
   - getTimeDateFunctions(): it now also lists function: epoch
+- Corrected MonetDatabaseMetaData method getTypeInfo() for result column
+  SEARCHABLE. It now returns DatabaseMetaData.typeSearchable for all
+  string data types including 'inet','json','url','uuid' and 'blob'.
 
 * Thu Sep 20 2018 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
 - Improved example program SQLcopyinto.java and moved it to tests directory
